fix: add force_orphan to fix Actions deploy conflict

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -34,4 +34,5 @@ jobs:
           publish_dir: ./dist
           publish_branch: main
           cname: tgautomobile.com
+          force_orphan: true
 
