--- a/package.json
+++ b/package.json
@@ -5,10 +5,12 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "vite-ssg build",
     "preview": "vite preview"
   },
   "dependencies": {
+    "@unhead/vue": "^2.1.4",
+    "vite-ssg": "^28.3.0",
     "vue": "^3.4.21",
     "vue-router": "^4.3.0"
   },
